--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h2><img src="images\arklettings500white.png" alt=""></h2>
                 <p>Looking to let your property<br> or for a place to stay?</p>
                 <ul class="actions">
-                    <li><a href="tel:0141-429-8128"class="button special">Give Us A Call!</a></li>
+                    <li><a href="tel:01414298128" class="button special">Give Us A Call!</a></li>
                 </ul>
             </div>
             <a href="#one" class="more scrolly">Learn More</a></section>
