--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </h1>
             <nav id="nav">
                 <ul>
-                    <li class="special"><a href="tel:0141-429-8128"></a> <span>0141 429 8128</span></a></li>
+                    <li class="special"><a href="tel:0141-429-8128"><span>0141 429 8128</span></a></li>
                 </ul>
             </nav>
         </header>
