--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
                                 <div class="item active">
                                     <div class="row">
                                         <div class="col-sm-12">
-                                            <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Etiam porta sem malesuada magna mollis euismod. Nulla vitae elit libero, a pharetra
-                                                augue. Donec id elit non mi porta gravida at eget metus.&rdquo;</p>
-                                            <small><strong>Vulputate M., Dolor</strong></small>
+                                            <p>&ldquo;What a great experience! Salman and his team did all they can to help me find a suitable accommodation for me and my family. Very professional and looked after me at every step of the way!
+.&rdquo;</p>
+                                            <small><strong>James</strong></small>
                                             <br><br><br><br>
                                         </div>
                                     </div>
@@ -230,18 +230,16 @@
                                 <div class="item">
                                     <div class="row">
                                         <div class="col-sm-12">
-                                            <p>&ldquo;Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Aenean lacinia bibendum nulla sed consectetur. Nullam id dolor
-                                                id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.&rdquo;</p>
-                                            <small><strong>Fringilla A., Vulputate Sit</strong></small><br><br><br><br>
+                                            <p>&ldquo;ARK Lets have truly demonstrated their professional and expert service to me during my tenure in Glasgow. There expert advice truly instilled great confidence in me.&rdquo;</p>
+                                            <small><strong>Steve</strong></small><br><br><br><br>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="item">
                                     <div class="row">
                                         <div class="col-sm-12">
-                                            <p>&ldquo;Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas faucibus mollis interdum.
-                                                Cras mattis consectetur purus sit amet fermentum.&rdquo;</p>
-                                            <small><strong>Aenean A., Justo Cras</strong></small><br><br><br><br>
+                                            <p>&ldquo;Out of all the lettings agents in Glasgow. ARK Lets were the ones that had the most options for me. Thank you.&rdquo;</p>
+                                            <small><strong>Angelina</strong></small><br><br><br><br>
                                         </div>
                                     </div>
                                 </div>
